--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start -H 0.0.0.0"
+
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
